fix: text wrapping

--- a/src/index.css
+++ b/src/index.css
@@ -51,8 +51,8 @@ html, body, #root {
 textarea {
   white-space: pre-wrap !important;
   word-wrap: break-word !important;
-  overflow-wrap: anywhere !important;
-  word-break: break-all !important;
+  overflow-wrap: break-word !important;
+  word-break: normal !important;
   overflow-x: hidden !important;
   overflow-y: auto !important;
 }
